syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/ramizkhan99/kvstore-proto";

service Store {
    rpc Set (SetRequest) returns (SetResponse) {}
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc GetPrefix (GetPrefixRequest) returns (GetPrefixResponse) {}
    rpc GetStats (google.protobuf.Empty) returns (StatsResponse) {}
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    string result = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message GetPrefixRequest {
    string prefix = 1;
}

message GetPrefixResponse {
    repeated string value = 1;
}

message StatsResponse {
    string key_count = 1;
    string value_count = 2;
}

enum StoreError {
    KEY_FOUND = 0;
    KEY_TOO_LONG = 1;
    KEY_NOT_FOUND = 2;
    SERVER_ERROR = 3;
    INVALID_KEY = 4;
    INVALID_VALUE = 5;
}
